--- a/.github/workflows/deploy_documentdb.yaml
+++ b/.github/workflows/deploy_documentdb.yaml
@@ -35,4 +35,5 @@ jobs:
       env:  # Define as variáveis de ambiente necessárias para a autenticação na AWS.
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Acessa o ID da chave de acesso da AWS via secrets.
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Acessa a chave secreta da AWS via secrets.
-        AWS_REGION: ${{ secrets.AWS_REGION }}  # Define a região da AWS via secrets.
+        AWS_REGION: ${{ secrets.AWS_REGION }}  # Define a região da AWS via secrets....
+        
